[package]
name = "TakeOnWeb"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.4", features = ["avif"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
moka = { version = "0.9", features = ["future"] }
lazy_static = "1.4"
num_cpus = "1.13"
url = "2.4"
clap = { version = "4.4", features = ["derive"] }
webp = "0.3"
threadpool = "1.8"
crossbeam-channel = "0.5"
byte-unit = "4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
