[package]
name = "Rusty-bandwidth"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11" }
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1"
image = { version = "0.24", features = ["webp"] }
webp = "0.2"
